--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -17,15 +17,15 @@
     font-size: 43px;
     line-height: 1.16;
     margin-bottom: 50px;
-    padding-left: 50px;
+    padding-left: 51px;
   }
 
   @media (min-width: $desktop-width) {
     font-size: 53px;
     line-height: 1.08;
-    padding-left: 111px;
-    padding-top: 78px;
-    margin-bottom: 37px;
+    padding-left: 112px;
+    padding-top: 79px;
+    margin-bottom: 36px;
   }
 
   &::after {
@@ -37,7 +37,7 @@
     }
 
     @media (min-width: $desktop-width) {
-      top: 61px;
+      top: 62px;
       left: 0;
     }
   }
@@ -57,15 +57,16 @@
   justify-items: start;
 
   @media (min-width: $tablet-width) and (max-width: 1149px) {
-    grid-template-columns: 77px 256px 78px 230px;
+    grid-template-columns: 78px 256px 78px 230px;
     grid-template-rows: auto;
     font-size: 17px;
     line-height: 1.76;
     padding: 0 50px;
-    margin-bottom: 46px;
+    margin-bottom: 48px;
   }
 
   @media (min-width: $desktop-width) {
+    grid-template-columns: 78px 1fr;
     font-size: 17px;
     line-height: 1.76;
     padding: 0 22px 0 111px;
@@ -89,7 +90,7 @@
 
 .contacts__email-underline {
   position: absolute;
-  top: 25px;
+  top: 26px;
   left: 2px;
   content: "";
   width: 167px;
@@ -97,13 +98,13 @@
   background-color: $color-email-underline;
 
   @media (min-width: $tablet-width) {
-    top: 28px;
+    top: 29px;
     left: 1px;
     width: 204px;
   }
 
   @media (min-width: $desktop-width) {
-    top: 32px;
+    top: 33px;
   }
 }
 
@@ -121,12 +122,12 @@
   display: block;
   width: 100%;
   height: 455px;
-  margin-bottom: 40px;
+  margin-bottom: 41px;
 
   @media (min-width: $tablet-width) {
     width: 100%;
     height: 457px;
-    margin-bottom: 56px;
+    margin-bottom: 55px;
   }
 
   @media (min-width: $desktop-width) {
@@ -143,7 +144,7 @@
 
   @media (min-width: $tablet-width) {
     display: block;
-    width: 232px;
+    width: 230px;
     margin: 0 auto;
     margin-bottom: 57px;
     font-size: 17px;
@@ -151,9 +152,8 @@
   }
 
   @media (min-width: $desktop-width) {
-    width: 230px;
     margin-bottom: 0;
-    padding: 16px 6px 0 0;
+    margin-right: 119px;
   }
 
   &:hover {
