--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,6 +1,6 @@
 .features {
   display: grid;
-  grid-template-columns: 97px 1fr;
+  grid-template-columns: 98px 1fr;
   grid-template-rows: 40px 40px 40px;
   grid-auto-flow: row;
   font-size: 15px;
@@ -9,6 +9,10 @@
 
   @media (min-width: $tablet-width) {
     padding-right: 42px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-right: 58px;
   }
 }
 
