--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -15,7 +15,7 @@
     min-height: 680px;
     margin-bottom: 49px;
     background-image: url("../../img/intro-tablet.jpg");
-    background-position: 30% 106%;
+    background-position: 30% 105%;
     background-repeat: no-repeat;
 
     @media (min-resolution: 2dppx) {
@@ -27,7 +27,7 @@
     position: relative;
     min-height: 702px;
     background-image: url("../../img/intro-desktop.jpg");
-    background-position: 50% 141%;
+    background-position: 50% 139%;
     background-repeat: no-repeat;
     margin-bottom: 54px;
 
@@ -39,13 +39,13 @@
   &::after {
     @media (min-width: $tablet-width) {
       position: absolute;
-      bottom: -13px;
+      bottom: -14px;
       content: url("../../img/zigzag-fill-tablet.svg");
     }
 
     @media (min-width: $desktop-width) {
       position: absolute;
-      bottom: -4px;
+      bottom: -5px;
       content: url("../../img/zigzag-fill-desktop.svg");
     }
   }
@@ -61,9 +61,10 @@
   @media (min-width: $tablet-width) {
     font-size: 43px;
     line-height: 1.16;
-    margin-bottom: 373px;
+    margin-bottom: 371px;
     padding: 0;
-    padding-top: 88px;
+    padding-top: 89px;
+    padding-left: 1px;
   }
 
   @media (min-width: $desktop-width) {
@@ -84,7 +85,6 @@
   @media (min-width: $tablet-width) {
     flex-direction: row;
     padding: 0 50px;
-    margin-bottom: 40px;
   }
 }
 
@@ -116,10 +116,14 @@
 
   &--primary {
     background-color: $color-green-light;
-    padding: 18px 35px 0 30px;
+    padding: 19px 35px 0 31px;
 
     @media (min-width: $tablet-width) {
-      padding: 25px 36px 0 35px;
+      padding: 26px 36px 0 36px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding: 26px 36px 0 37px;
     }
 
     &:hover,
@@ -130,10 +134,14 @@
 
   &--secondary {
     background-color: $color-green-dark;
-    padding: 16px 26px 0 30px;
+    padding: 18px 26px 0 30px;
 
     @media (min-width: $tablet-width) {
-      padding: 25px 34px 0 35px;
+      padding: 26px 34px 0 36px;
+    }
+
+    @media (min-width: $desktop-width) {
+      padding: 26px 34px 0 37px;
     }
 
     &:hover,
