--- a/source/sass/blocks/product.scss
+++ b/source/sass/blocks/product.scss
@@ -7,7 +7,7 @@
     padding: 0 50px;
     grid-template-columns: auto auto 100px;
     grid-template-rows: repeat(5, auto);
-    margin-bottom: 122px;
+    margin-bottom: 121px;
   }
 
   @media (min-width: $desktop-width) {
@@ -17,7 +17,7 @@
   &::after {
     @media (max-width: $mobile-width-only) {
       position: absolute;
-      bottom: 29px;
+      bottom: 28px;
       left: 0;
       content: url("../../img/zigzag-line-mobile.svg");
     }
@@ -45,7 +45,7 @@
     grid-row: 1 /2;
     font-size: 43px;
     line-height: 1.16;
-    margin-bottom: 37px;
+    margin-bottom: 38px;
   }
 
   @media (min-width: $desktop-width) {
@@ -54,7 +54,7 @@
     z-index: 1;
     font-size: 53px;
     line-height: 1.08;
-    padding: 61px 0 0 57px;
+    padding: 61px 0 0 58px;
     margin: 0;
   }
 }
@@ -62,7 +62,7 @@
 .product__subtitle {
   display: block;
   line-height: 1.18;
-  margin-bottom: 18px;
+  margin-bottom: 17px;
 
   @media (min-width: $tablet-width) {
     grid-column: 3 / 4;
@@ -76,7 +76,7 @@
   @media (min-width: $desktop-width) {
     grid-column: 1 / 2;
     grid-row: 1 / 2;
-    padding: 69px 0 0 45px;
+    padding: 69px 0 0 46px;
   }
 }
 
@@ -93,14 +93,14 @@
     grid-row: 2 / 3;
     font-size: 17px;
     line-height: 1.76;
-    margin-bottom: 27px;
+    margin-bottom: 25px;
   }
 
   @media (min-width: $desktop-width) {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     margin: 0;
-    padding: 15px 0 0 57px;
+    padding: 15px 0 0 58px;
   }
 }
 
@@ -132,7 +132,7 @@
     grid-column: 2 / 4;
     grid-row: 2 / 6;
     margin: 0;
-    padding-top: 11px;
+    padding-top: 12px;
   }
 
   @media (min-width: $desktop-width) {
@@ -185,7 +185,10 @@
 }
 
 .product__button {
+  font-family: "Open sans", sans-serif;
   margin-bottom: 43px;
+  padding-top: 2px;
+
 
   @media (min-width: $tablet-width) {
     grid-column: 1 / 2;
@@ -195,7 +198,7 @@
     align-self: end;
     font-size: 17px;
     padding-top: 6px;
-    margin-bottom: 4px;
+    margin-bottom: 5px;
   }
 
   @media (min-width: $desktop-width) {
