--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,16 +1,16 @@
 .reviews {
   position: relative;
-  padding: 31px 30px;
+  padding: 29px 30px 30px;
 
   @media (min-width: $tablet-width) {
     min-height: 457px;
     display: flex;
     flex-wrap: wrap;
     padding: 0 50px;
-    margin-bottom: 154px;
-    background-image: url("../../img/review-bg.jpg"), linear-gradient(to right, $color-bg-grey 350px, $color-white 350px);
-    background-position: left center, left center;
-    background-repeat: no-repeat, no-repeat;
+    margin-bottom: 153px;
+    background-image: url("../../img/review-bg.jpg");
+    background-position: left center;
+    background-repeat: no-repeat;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../../img/review-bg@2x.jpg");
@@ -19,10 +19,10 @@
   }
 
   @media (min-width: $desktop-width) {
-    padding: 0 49px 0 200px;
+    padding: 0 50px 0 200px;
     margin-bottom: 162px;
-    background-image: url("../../img/review-bg.jpg"), linear-gradient(to right, $color-white 50px, $color-bg-grey 50px, $color-bg-grey 398px, $color-white 398px);
-    background-position: 6% 100%;
+    background-image: url("../../img/review-bg.jpg");
+    background-position: 50px 1px;
 
     @media (min-resolution: 2dppx) {
       background-image: url("../../img/review-bg@2x.jpg");
@@ -32,7 +32,7 @@
   &::after {
     @media (max-width: $mobile-width-only) {
       position: absolute;
-      bottom: 37px;
+      bottom: 35px;
       left: 0;
       content: url("../../img/zigzag-line-mobile.svg");
     }
@@ -40,7 +40,7 @@
     @media (min-width: $tablet-width) {
       position: absolute;
       left: 0;
-      bottom: -91px;
+      bottom: -89px;
       content: url("../../img/zigzag-line-tablet.svg");
     }
 
@@ -81,7 +81,7 @@
 
 .reviews__text {
   margin: 0;
-  margin-bottom: 34px;
+  margin-bottom: 35px;
   padding: 0;
   font-size: 15px;
   line-height: 2;
@@ -96,7 +96,7 @@
   @media (min-width: $desktop-width) {
     padding: 0 65px 44px 25px;
     margin: 0;
-    margin-top: -30px;
+    margin-top: -28px;
   }
 }
 
@@ -189,6 +189,7 @@
 
 .reviews__write {
   padding-top: 15px;
+  padding-left: 2px;
   margin-bottom: 61px;
 
   @media (min-width: $tablet-width) {
@@ -198,7 +199,11 @@
     font-size: 17px;
     line-height: 1.18;
     margin: 0;
-    margin-top: 80px;
+    margin-top: 78px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-top: 79px;
   }
 
   &:hover {
