--- a/source/sass/blocks/modal-container.scss
+++ b/source/sass/blocks/modal-container.scss
@@ -1,13 +1,17 @@
 .modal-container {
   position: fixed;
+  z-index: 10;
   width: 100%;
   height: 100%;
   display: flex;
   background-color: rgba(242, 242, 242, 0.9);
 }
 
-// Uncomment below to disable modal
-
+// Сomment out below to open modal
 .modal-container--closed {
   display: none;
+}
+
+.modal-container--open {
+  display: flex;
 }
