--- a/source/sass/blocks/page-body.scss
+++ b/source/sass/blocks/page-body.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   background-color: $color-white;
   margin: 0 auto;
-  font-family: "Open sans", sans-serif;
+  font-family: "Open sans", "Arial", sans-serif;
 
   @media (min-width: $tablet-width) {
     width: 768px;
