--- a/source/sass/global/button.scss
+++ b/source/sass/global/button.scss
@@ -6,6 +6,7 @@
   padding: 0;
   background-color: transparent;
   border: 2px solid #444444;
+  font-family: "Open sans", sans-serif;
   font-size: 18px;
   line-height: 1.11;
   text-transform: uppercase;
