--- a/source/sass/global/text-styles.scss
+++ b/source/sass/global/text-styles.scss
@@ -12,7 +12,8 @@
   font-size: 17px;
 }
 
-.subtitle--green {
+.subtitle--green,
+.filter__title--green {
   font-weight: 700;
   text-transform: uppercase;
   color: #63d1bb;
