--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -118,7 +118,8 @@
   }
 }
 
-.contacts__map {
+.contacts__map-wrapper {
+  position: relative;
   display: block;
   width: 100%;
   height: 455px;
@@ -132,10 +133,17 @@
 
   @media (min-width: $desktop-width) {
     width: 527px;
-    height: 457px;
     order: 1;
     margin-bottom: 0;
   }
+}
+
+.contacts__map-wrapper .contacts__map {
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
 }
 
 .contacts__write {
