fixed build task

--- a/source/sass/blocks/modal-form.scss
+++ b/source/sass/blocks/modal-form.scss
@@ -10,9 +10,11 @@
 .modal-form__title {
   font-family: "Open sans", sans-serif;
   font-size: 15px;
+  font-weight: 400;
   line-height: 2;
   text-align: center;
   color: $color-text-light;
+  margin: 0;
   margin-bottom: 23px;
 
   @media (min-width: $tablet-width) {
