--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -124,17 +124,20 @@
   width: 100%;
   height: 455px;
   margin-bottom: 41px;
+  background-image: url("../../img/map-image-mobile.jpg");
 
   @media (min-width: $tablet-width) {
     width: 100%;
     height: 457px;
     margin-bottom: 55px;
+    background-image: url("../../img/map-image-tablet.jpg");
   }
 
   @media (min-width: $desktop-width) {
     width: 527px;
     order: 1;
     margin-bottom: 0;
+    background-image: url("../../img/map-image-desktop.jpg");
   }
 }
 
