--- a/source/sass/blocks/assortement-list.scss
+++ b/source/sass/blocks/assortement-list.scss
@@ -4,6 +4,7 @@
   padding: 19px 344px 17px 51px;
   display: flex;
   flex-direction: row;
+  align-self: start;
   background-color: $color-bg-grey;
   border-top: 1px solid $color-nav-border;
 
