--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -5,7 +5,6 @@
 
   @media (min-width: $tablet-width) {
     padding: 0 50px;
-    margin-bottom: 25px;
   }
 
   @media (min-width: $desktop-width) {
@@ -36,15 +35,17 @@
   padding: 0;
 
   @media (min-width: $tablet-width) {
-    max-height: 500px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    margin-bottom: 26px;
+    max-width: 650px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-auto-flow: column;
+    column-gap: 20px;
+    margin-bottom: 25px;
   }
 
-  @media (min-width: $tablet-width) {
-    margin-bottom: 0;
+  @media (min-width: $desktop-width) {
+    column-gap: 50px;
   }
 }
 
@@ -63,11 +64,6 @@
 
   @media (min-width: $tablet-width) {
     margin-bottom: 56px;
-    margin-right: 101px;
-  }
-
-  @media (min-width: $desktop-width) {
-    margin-right: 116px;
   }
 
   &--eco::before {
