--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,10 +1,9 @@
 .contacts {
   @media (min-width: $desktop-width) {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 172px 1fr 52px;
     padding: 0 49px 105px 113px;
-    max-height: 457px;
   }
 }
 
@@ -25,7 +24,8 @@
     line-height: 1.08;
     padding-left: 112px;
     padding-top: 79px;
-    margin-bottom: 36px;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
   }
 
   &::after {
@@ -70,7 +70,8 @@
     font-size: 17px;
     line-height: 1.76;
     padding: 0 22px 0 111px;
-    margin-bottom: 82px;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
   }
 }
 
@@ -138,6 +139,8 @@
     order: 1;
     margin-bottom: 0;
     background-image: url("../../img/map-image-desktop.jpg");
+    grid-column: 2 / 3;
+    grid-row: 1 / 4;
   }
 }
 
@@ -165,6 +168,8 @@
   @media (min-width: $desktop-width) {
     margin-bottom: 0;
     margin-right: 119px;
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
   }
 
   &:hover {
