--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -13,8 +13,10 @@
   }
 
   @media (min-width: $tablet-width) {
+    max-width: 342px;
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     padding-left: 50px;
     background-color: $color-bg-grey;
     border-top: 1px solid $color-nav-border;
@@ -22,6 +24,7 @@
   }
 
   @media (min-width: $desktop-width) {
+    max-width: 462px;
     background-color: $color-white;
     border: none;
     margin-right: 38px;
